Update ease methods

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
@@ -7,7 +7,7 @@
 		.image {
 			background-size: cover;
 			opacity: 0;
-			transition: opacity .8s ease(Linear)
+			transition: opacity .8s ease(linear)
 		}
 
 		.is-active {
