Increased root font size for 1440 screens

--- a/deploy/htdocs/version/src/inc/style/layout/_layout.scss
+++ b/deploy/htdocs/version/src/inc/style/layout/_layout.scss
@@ -45,7 +45,7 @@ body {
 /**
  * Define the root font size for the different media queries
  */
-@include respond-to(XX_LARGE) {
+@include respond-to(X_LARGE) {
 	:root {
 		font-size: $baseFontSize * 0.7;
 	}
