Fixed resize issue with the map slider Set the circle button size to be fixed to 50px

--- a/deploy/htdocs/version/src/inc/style/component/_map-slider.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_map-slider.scss
@@ -77,7 +77,7 @@
 	.knob {
 		@include pos(50%, auto, auto, 0);
 		@include size($sizeGrid * 2);
-		transform: translateY(-50%);
+		margin-top: -$sizeGrid;
 		border: 1px solid $colorBorder;
 		position: absolute;
 		border-radius: 100%;
