--- a/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
@@ -1,7 +1,5 @@
 .component-block-hero-main {
-	@include aspect-ratio(40*$sizeGrid, $sizeGrid * 24);
-	min-height: $sizeGrid * 24;
-	max-height: 100vh;
+	@include size(100%, 100vh);
 
 	&.has-statistics {
 
@@ -104,10 +102,6 @@
 	@include respond-to(SMALL) {
 		min-height: 0;
 		height: calc(100vh - #{$sizeGrid * 2});
-
-		&:before {
-			display: none;
-		}
 
 		.background-triangle {
 			@include arrow(right, rgba($colorPrimary, .95), $sizeGrid * 48);
