--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
@@ -1,30 +1,32 @@
 <div class="component-block-market-map" data-bind="with: data">
 
-	<div class="map-box abs-fill" id="js-map"></div>
+	<div class="map-box-wrapper">
+		<div class="map-box abs-fill" id="js-map"></div>
 
-	<div class="zoom-actions">
-		<!-- ko component: {
-			name: 'button/button-circle-icon',
-			options: {
-				'icon': 'plus',
-				'action': {
-					event: $root.handleZoomInClick.bind($root),
-					label: 'Zoom in',
-					title: 'Zoom in'
+		<div class="zoom-actions">
+			<!-- ko component: {
+				name: 'button/button-circle-icon',
+				options: {
+					'icon': 'plus',
+					'action': {
+						event: $root.handleZoomInClick.bind($root),
+						label: 'Zoom in',
+						title: 'Zoom in'
+					}
 				}
-			}
-		} --><!-- /ko -->
-		<!-- ko component: {
-			name: 'button/button-circle-icon',
-			options: {
-				'icon': 'minus',
-				'action': {
-					event: $root.handleZoomOutClick.bind($root),
-					label: 'Zoom in',
-					title: 'Zoom in'
+			} --><!-- /ko -->
+			<!-- ko component: {
+				name: 'button/button-circle-icon',
+				options: {
+					'icon': 'minus',
+					'action': {
+						event: $root.handleZoomOutClick.bind($root),
+						label: 'Zoom in',
+						title: 'Zoom in'
+					}
 				}
-			}
-		} --><!-- /ko -->
+			} --><!-- /ko -->
+		</div>
 	</div>
 
 	<div class="selected-value copy-03" data-bind="
@@ -35,7 +37,7 @@
 		tap: $root.toggleSidePanel.bind($root)
 	">
 		<!-- ko if: $root.selectedState() -->
-			{{ $root.selectedState().value }}
+			{{ $root.selectedState().city }}, {{$root.selectedState().statePostalCode}}
 		<!-- /ko -->
 
 		<!-- ko ifnot: $root.selectedState() -->
