Add fixed element helper to fix jumpy issues for fixed elements and input fields Fixed mobile layout for the block network overview Fixed transition in on mobile for the image call to actions Add retina loading.gif

--- a/deploy/htdocs/version/src/inc/style/component/_page-loader.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_page-loader.scss
@@ -5,8 +5,12 @@
 	z-index: zindex($layout, pageLoader);
 	position: fixed;
 
-	.spinnner {
+	.spinner {
 		@include size(32px);
+
+		img {
+			@include size(100%);
+		}
 	}
 }
 
