--- a/deploy/htdocs/version/src/inc/style/component/_filter-menu.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_filter-menu.scss
@@ -17,13 +17,21 @@
 	.reset-wrapper {
 		@include size($sizeGrid * 2);
 		position: relative;
+
+		&:after {
+			@include size(1px, $sizeGrid);
+			@include pos(50%, 0, auto, auto);
+			position: absolute;
+			content: "";
+			transform: translate(0, -50%);
+			background-color: rgba(#dcdcdc, 0.6);
+		}
 	}
 
 	.button-reset {
 		@include abs-center($sizeGridSecondary);
 		border-radius: 100%;
 		color: $colorTertiary;
-		border: 1px solid $colorTertiary;
 
 		.icon {
 			@include size(14px);
@@ -146,11 +154,11 @@
 		}
 
 		&:before {
+			@include pos(auto, 0, 0, 0);
+			@include size(0, 1px);
 			position: absolute;
 			content: "";
-			@include pos(auto, 0, 0, 0);
 			background-color: $colorTertiary;
-			@include size(0, 1px);
 			transition: width 250ms ease(easeOutExpo);
 		}
 
