--- a/deploy/htdocs/version/src/inc/style/asset/_form.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_form.scss
@@ -17,10 +17,10 @@
 	}
 
 	.shadow-element {
+		@include offset(0, 0);
 		opacity: 0;
-		display: inline-block;
 		position: absolute;
-		max-width: 100%;
+		pointer-events: none;
 	}
 
 	input {
