Refactored the search component Fade in persona selector

--- a/deploy/htdocs/version/src/inc/style/asset/_form.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_form.scss
@@ -88,6 +88,7 @@
 		height: $sizeGrid*2;
 
 		input,
+		.shadow-element,
 		.placeholder-label {
 			font-size: mobile-size(2.4rem);
 			line-height: $sizeGrid*2;
