--- a/deploy/htdocs/version/src/inc/style/component/block/_block-market-map.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-market-map.scss
@@ -254,6 +254,9 @@
 		}
 
 		// Search Bar
+		.component-market-search {
+			@include pos(auto, 0, 0, 0);
+		}
 		//.search-bar {
 		//	height: $sizeGrid*8;
 		//	position: relative;
