--- a/deploy/htdocs/version/src/inc/style/component/block/_block-text.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-text.scss
@@ -1,17 +1,21 @@
 .component-block-text {
 
-	.site-frame	{
+	.site-frame {
 		padding-left: $sizeGrid * 7;
 		padding-right: $sizeGrid * 7;
 	}
 
-	h1,h2,h3,h4 {
+	h1, h2, h3, h4 {
 		@extend %heading-07;
 		padding-bottom: $sizeGrid/2;
 	}
 
 	p {
 		@extend %copy-01;
+
+		&:not(:first-child) {
+			margin-top: $sizeGrid;
+		}
 	}
 
 	// Breakpoints
@@ -21,7 +25,7 @@
 			padding-right: $sizeGrid;
 		}
 
-		h1,h2,h3,h4 {
+		h1, h2, h3, h4 {
 			font-size: mobile-size(3.5rem);
 			padding-bottom: $sizeGrid;
 		}
