Dynamic copyright label

--- a/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
@@ -42,6 +42,6 @@
 		</nav>
 	</section>
 	<section class="bottom-section">
-		<p class="copyright">@Charter Communications</p>
+		<p class="copyright" data-bind="html: $data.copyright"></p>
 	</section>
 </footer>
